# ElCap

./: .gitignore  CMakeLists.txt
scripts/: elcap.py  elconsts.rb  elconsts.txt  ifconfig.sh  upload.sh
src/: CMakeLists.txt
src/cpp/: MainWindow.cpp  MainWindow.hpp  SettingsDialog.cpp  SettingsDialog.hpp  main.cpp
src/php/: elcap.php
src/ui/: MainWindow.ui  SettingsWindow.ui
